# cuda_neural_network

./: README.md  cuda_nn.sln
cuda_nn/: Errorhelper.cpp  MLP.cpp  MLP.h  MSE.cu  MSE.h  ReLU.cu  ReLU.h  Sigmoid.cu  Sigmoid.h  Tensor.cu  cuda_nn.vcxproj  cuda_nn.vcxproj.filters  kernel.cpp  kernel.cu  layer.h  layers.h  linear.cu  linear.h  main.cpp  tensor.cu  tensor.h  tensor_oprations.cpp  tensor_oprations.cu  tensor_oprations.cuh  tensor_oprations.h
cuda_nn/costs/: MSE.cu  MSE.h
cuda_nn/example/: XOR.cu  XOR.h  kidney_cf.cu  kidney_cf.h
cuda_nn/layers/: BatchNorm.cu  BatchNorm.h  CNN2D.cu  CNN2D.h  MaxPool2d.cu  MaxPool2d.h  ReLU.cu  ReLU.h  Sigmoid.cu  Sigmoid.h  layer.h  linear.cu  linear.h
cuda_nn/models/: Image_CF.cpp  Image_CF.h  MLP.cpp  MLP.h
cuda_nn/utils/: CMakeLists.txt  Tensor.cu  tensor.h  tensor_oprations.cu  tensor_oprations.h
linux_cuda_nn/: CMakeLists.txt  main.cpp
linux_cuda_nn/costs/: MSE.cu
linux_cuda_nn/example/: XOR.cu  kidney_cf.cu
linux_cuda_nn/layers/: BatchNorm.cu  BatchNorm.h  CNN2D.cu  CNN2D.h  MaxPool2d.cu  MaxPool2d.h  ReLU.cu  ReLU.h  Sigmoid.cu  Sigmoid.h  flatten_layer.cu  layer.h  linear.cu  linear.h
linux_cuda_nn/models/: MLP.cpp  MLP.h
linux_cuda_nn/utils/: Tensor.cu  Tensor.h  tensor_oprations.cu  tensor_oprations.h
